wip gulp modularization typescript